--- a/demo-a-auto-config/src/main/resources/application.properties
+++ b/demo-a-auto-config/src/main/resources/application.properties
@@ -9,3 +9,8 @@ cas.server-login-url=http://192.168.56.104:8080/cas/login
 cas.client-host-url=http://10.2.6.63:8081
 #校验ticket使用的协议，可选： CAS（代表CAS2）、CAS3、SAML
 cas.validation-type=CAS3
+#启用单点登出
+cas.single-logout.enabled=true
+
+#自定义登出跳转地址
+custom.cas.single-logout-url=${cas.server-url-prefix}/logout?service=${cas.client-host-url}/logoutPage
