--- a/demo-b-manual-config/src/main/resources/application.properties
+++ b/demo-b-manual-config/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 server.port=8082
 #cas服务端地址
 custom.cas.casServerUrlPrefix=http://192.168.56.104:8080/cas
-#当前服务地址
+#当前服务名称
 custom.cas.serverName=http://10.2.6.63:8082
+#自定义单点登出地址
+custom.cas.casSingleLogoutUrl=${custom.cas.casServerUrlPrefix}/logout?service=${custom.cas.serverName}/logoutPage
+
+#查看单点登录处理类SingleSignOutHandler的动作，生产环境需关闭
+logging.level.org.jasig.cas.client.session.SingleSignOutHandler=trace
